[tool.poetry]
name = "keepasste"
version = "0.3.1"
description = ""
authors = ["Dick Marinus"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
injectinput = "^0.3.0"
tomli = ">=2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
keepasste = 'keepasste:main'
